# sk02-toolchain

./: .gitignore  BUILD_GUIDE.md  README.md  SIMULATOR.md  bin2sim  main.py  pyproject.toml  register.md  sk02-build  sk02-build-quiet  sk02-build-sim  sk02-sim
docs/: c-subset-feasibility.md  calling-convention.md  compiler-usage.md  implementation-status.md  simulator.md  stack.md
examples/: README.md  arithmetic.c  bubble_sort.c  conditionals.c  hello.c  loops.c  simple_test.c
simulator/: __init__.py  __main__.py  cpu.py  memory.py  opcodes.py  tui.py  ui.py
src/sk02_asm/: __init__.py  __main__.py  assembler.py  cli.py  directives.py  errors.py  lexer.py  opcodes.py  output.py  parser.py  preprocessor.py  symbols.py
src/sk02action/: SK02-Action-Language-Spec.md  __init__.py  ast_nodes.py  call_graph.py  cli.py  codegen.py  compiler.py  const_fold.py  emitter.py  lexer.py  parser.py  progress.md  symbol_table.py  tokens.py  type_checker.py
src/sk02cc/: SPEC.md  __init__.py  __main__.py  ast_nodes.py  calling_convention.py  cli.py  codegen.py  codegen_errors.py  compiler.py  emitter.py  lexer.py  parser.py  symbol_table.py  tokens.py  type_checker.py
tests/: test_action_callgraph.py  test_action_codegen.py  test_action_constfold.py  test_action_e2e.py  test_action_lexer.py  test_action_parser.py  test_action_types.py  test_assembler.py  test_compiler.py
